<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="0"
    tools:context="no.hvl.dat153.navne_applikasjon.LearningModeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/learningMode_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:textAlignment="center" />

        <ImageSwitcher
            android:id="@+id/learningMode_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:adjustViewBounds="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="0"
            android:text="@string/learningMode_task"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        <EditText
            android:id="@+id/learningMode_textInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:hint="@string/hint_name"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/learningMode_checkButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/learningMode_check" />
    </LinearLayout>
</ScrollView>