<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:key="preferenceScreen">

    <EditTextPreference
        android:key="display_name"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_display_name_title"
        android:summary="@string/pref_display_name_summary"
        android:hint="@string/pref_display_name_default"
        />
    <Preference
        android:key="profile_picture"
        android:title="@string/pref_profile_picture_title"
        android:summary="@string/pref_profile_picture_summary"/>
</PreferenceScreen>